[package]
name = "cryptopals"
version = "0.1.0"
authors = ["Tom Taylor <tom[at]tom.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.test]
opt-level = 3

[dependencies]
hex = "0.4.2"
base64 = "0.12.1"
hamming = "0.1.3"